kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: webapp
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: backend
          image: deekshithc1/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"      
          readinessProbe:
            httpGet:
              path: /api/message
              port: 7000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/message
              port: 7000
            initialDelaySeconds: 20
            periodSeconds: 20
